// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Encoding > ISO-8859-1 1`] = `
Uint8Array [
  10,
  13,
  9,
  8,
  32,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  88,
  89,
  90,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  197,
  196,
  214,
  229,
  228,
  246,
  220,
  252,
  223,
]
`;

exports[`Encoding > UTF-8 1`] = `
Uint8Array [
  10,
  13,
  9,
  8,
  32,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  88,
  89,
  90,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  195,
  133,
  195,
  132,
  195,
  150,
  195,
  165,
  195,
  164,
  195,
  182,
  195,
  156,
  195,
  188,
  195,
  159,
]
`;
